person grpc handler
